# task-manager-qt-cpp

./: CMakeLists.txt  README.md  commands.txt  conanfile.txt  tasks.md
MainWindow/Model/: ProcessTableModel.cpp  ProcessTableModel.hpp
Proccess/Objects/: Process.cpp  Process.hpp
Proccess/ProcessFetchers/Interface/: ProcessFetcherI.hpp
Proccess/ProcessFetchers/Test/: ProcessFetcherTest.hpp
src/: ApplicationInfo.cpp  ApplicationInfo.hpp  CMakeLists.txt  main.cpp  mainTEST.cpp
src/GUI/MainWindow/: Actions.cpp  Actions.hpp  LanguageHelper.cpp  LanguageHelper.hpp  MainWindow.cpp  MainWindow.hpp  MenuBarActions.cpp  MenuBarActions.hpp  ProcTableSortProxy.cpp  ProcTableSortProxy.hpp  ProcTableViewHelper.cpp  ProcTableViewHelper.hpp  Settings.cpp  Settings.hpp
src/GUI/MainWindow/Settings/: SettingsDialog.cpp  SettingsDialog.hpp  StyleContainer.cpp  StyleContainer.hpp  StyleContainerBuilder.cpp  StyleContainerBuilder.hpp
src/GUI/MainWindow/Settings/SettingsMemento/: SettingsMemento.cpp  SettingsMemento.hpp  SettingsMementoCreator.cpp  SettingsMementoCreator.hpp  StyleContainer.cpp  StyleContainer.hpp  StyleContainerCreator.cpp  StyleContainerCreator.hpp
src/GUI/MainWindow/Settings/Ui/: SettingsUi.cpp  SettingsUi.hpp  StyleUi.cpp  StyleUi.hpp  settings.ui
src/GUI/MainWindow/Ui/: UiMainWindow.hpp  generateUi.sh  mainwindow.ui
src/GUI/MainWindow/Utils/: ConditionAction.cpp  ConditionAction.hpp
src/GUI/Model/: ProcessTableModel.cpp  ProcessTableModel.hpp
src/MainWindow/: MainWindow.cpp  UiMainWindow.hpp
src/Process/Objects/: Process.cpp  Process.hpp
src/Process/ProcessFetchers/Interface/: ProcessFetcherI.hpp
src/Process/ProcessFetchers/Linux/: ProcessFetcherLinux.cpp  ProcessFetcherLinux.hpp
src/Process/ProcessFetchers/Test/: ProcessFetcherTest.cpp  ProcessFetcherTest.hpp
src/Process/ProcessFetchers/Utils/: Utils.cpp  Utils.hpp
src/Process/ProcessFetchers/Windows/: ProcessFetcherWindows.cpp  ProcessFetcherWindows.hpp
translations/: rus.ts
